# Taxi-Duration-Prediction

./: DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  LICENSE  README.md  docker-compose.yml  lambda_handler.py  mlflow.db  pyproject.toml  requirements-lambda.txt  requirements.txt  setup.py  start.ipynb  t.txt
.github/workflows/: ci-cd-ec2.yml  ci-cd.yml
deployment/: Dockerfile
deployment/api/: app.py
mlruns/1/067db8b306cf41798dfa82822131a605/artifacts/: feature_importance_weight.json
mlruns/1/129cd6a523a44c85a51e2e2401d3c478/artifacts/: feature_importance_weight.json
mlruns/1/19b044f548d045d48b912405a40089f6/artifacts/: metric_info.json
mlruns/1/63a49b94e9ba4ac1b0867c2f8f6d3e15/artifacts/: metric_info.json
mlruns/1/77a08bec987347d8b3b9cc21e82a1bc3/artifacts/: feature_importance_gain.json  feature_importance_split.json
mlruns/1/9172fc874bfd473e9908e6d19d3052ee/artifacts/: feature_importance_gain.json  feature_importance_split.json
mlruns/1/b4b2bf1bf5e34abf8374ff0632560edc/artifacts/: feature_importance_weight.json
notebooks/: start.ipynb
scripts/: create_iam_role.sh  extract_model.py
src/: .env.example  app.py  main.py  t.py  test_inference.py
src/artifacts/: best_model.json  dict_vectorizer.pkl  simple_model.pkl
src/config/: config.py  settings.py
src/data_pulling/: download_data.py  read_data.py
src/features/: feature_pipeline.py
src/inference/: inference_pipeline.py  inference_sample.py  predict.py  simple_predict.py
src/routes/: base.py  taxi.py
src/schemas/: taxi_schema.py
src/training/: mlflow_utils.py  model_history.py  multi_model_trainer.py  trainer.py
src/utils/: logging_config.py  print_directory.py
tests/: x.py
tests/integration/: test_inference.py
tests/unit/: test_download_data.py  test_features.py  test_features_transformation.py  test_read_data.py
(+56 files in other folders)
