[project]
name = "taxi-duration-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "loguru>=0.7.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "lightgbm>=4.6.0",
    "xgboost>=3.0.0",
    "catboost>=1.2.8",
    "requests>=2.32.3",
    "mlflow>=2.22.0",
    "matplotlib>=3.10.1",
    "pyarrow>=19.0.1",
    "fastparquet>=2024.11.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.0",
    "mangum>=0.19.0",
]

[project.optional-dependencies]

dev = [
    "ipykernel>=6.29.5"
]
